# opaline

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  deny.toml  justfile
.github/workflows/: ci.yml  cicd.yml  docs.yml  release.yml
docs/: index.md  package.json  pnpm-lock.yaml
docs/.vitepress/: config.ts
docs/.vitepress/theme/: index.ts  silkcircuit.css
docs/getting-started/: index.md  installation.md  quick-start.md
docs/guide/: builder.md  cli.md  color-manipulation.md  crossterm.md  css.md  custom-themes.md  derivation.md  egui.md  gradients.md  owo-colors.md  ratatui.md  styles.md  syntect.md  theme-selector.md  themes.md  tokens.md
docs/reference/: api.md  errors.md  features.md  tokens.md
docs/themes/: community.md  index.md  silkcircuit.md
examples/: theme_showcase.rs
src/: color.rs  discovery.rs  error.rs  gradient.rs  lib.rs  loader.rs  names.rs  resolver.rs  schema.rs  style.rs  theme.rs
src/adapters/: cli.rs  crossterm.rs  css.rs  egui.rs  iced.rs  mod.rs  owo_colors.rs  ratatui.rs  syntect.rs
src/builtins/: ayu_dark.toml  ayu_light.toml  ayu_mirage.toml  catppuccin_frappe.toml  catppuccin_latte.toml  catppuccin_macchiato.toml  catppuccin_mocha.toml  dracula.toml  everforest_dark.toml  everforest_light.toml  flexoki_dark.toml  flexoki_light.toml  github_dark_dimmed.toml  github_light.toml  gruvbox_dark.toml  gruvbox_light.toml  kanagawa_dragon.toml  kanagawa_lotus.toml  kanagawa_wave.toml  light_owl.toml  mod.rs  monokai_pro.toml  night_owl.toml  nord.toml  one_dark.toml  one_light.toml  palenight.toml  rose_pine.toml  rose_pine_dawn.toml  rose_pine_moon.toml  silkcircuit_dawn.toml  silkcircuit_glow.toml  silkcircuit_neon.toml  silkcircuit_soft.toml  silkcircuit_vibrant.toml  solarized_dark.toml  solarized_light.toml  tokyo_night.toml  tokyo_night_moon.toml  tokyo_night_storm.toml
src/widgets/: mod.rs  theme_selector.rs
tests/: adapter_tests.rs  builtins_tests.rs  color_tests.rs  crossterm_tests.rs  css_tests.rs  egui_tests.rs  export_tests.rs  gradient_tests.rs  iced_tests.rs  loader_tests.rs  owo_colors_tests.rs  resolver_tests.rs  style_tests.rs  syntect_tests.rs  theme_selector_tests.rs  theme_tests.rs
